Fix center alignment: remove left:50% transform hack, add letter-spacing offset

--- a/home.css
+++ b/home.css
@@ -60,13 +60,15 @@ canvas {
 #ui-layer {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
     text-align: center;
     z-index: 1;
     pointer-events: none;
     /* mix-blend-mode: exclusion; Removed as it makes black text invisible on white bg */
     width: 100%;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -103,6 +105,7 @@ p {
     margin-top: 25px;
     opacity: 0.7;
     margin-bottom: 2rem;
+    padding-left: 0.5em; /* Offset letter-spacing for visual centering */
 }
 
 /* Enter Button */
@@ -357,6 +360,7 @@ p {
     p {
         font-size: 0.7rem;
         letter-spacing: 0.25em;
+        padding-left: 0.25em; /* Offset letter-spacing for visual centering */
     }
 
     #ui-layer {
@@ -369,6 +373,7 @@ p {
         text-align: center;
         padding: 0;
         margin: 0;
+        box-sizing: border-box;
     }
 
     .btn-enter {
